Fix small toolbar non-exclusive button layout bug with aspect-ratio

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,6 +56,7 @@
         justify-self: center;
         align-self: end;
         margin-bottom: 1em;
+        z-index: 2;
       }
 
       &>mapper-canvas {
@@ -69,6 +70,7 @@
         grid-area: main;
         justify-self: end;
         align-self: end;
+        z-index: 1;
       }
 
       &>mapper-file-url-loader {
