--- a/src/app/shared/components/tools-bar/tools-bar.component.scss
+++ b/src/app/shared/components/tools-bar/tools-bar.component.scss
@@ -9,7 +9,7 @@
     height: 100%;
     padding: 0;
     min-width: 0;
-    aspect-ratio: 1;
+    width: 50px;
 
     &>mat-icon {
       margin: 0;
